# drumcut

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
drumcut/: __init__.py  cli.py  config.py  export.py  ui.py
drumcut/audio/: __init__.py  align.py  io.py  mix.py  normalize.py  pan.py
drumcut/grouping/: __init__.py  cluster.py  features.py  similarity.py
drumcut/segmentation/: __init__.py  detect.py  slice.py
drumcut/video/: __init__.py  clip.py  filters.py  gopro.py  merge.py  sync.py
tests/: __init__.py  conftest.py  test_audio.py  test_cli.py  test_gopro.py  test_grouping.py  test_mix.py  test_segmentation.py  test_video.py
tests/fixtures/: generate_fixtures.py
